# wedding-planner-api

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  Capstone Project –  Part 1.md  Capstone Project –  Part 2.md  ERD_DIAGRAMS.md  LICENSE  PR_AUTHENTICATION_VIEWS.md  PR_SERIALIZERS_DESCRIPTION.md  README.md  SECURITY_ANALYSIS.md  WEDDING_PLANNER_BLUEPRINT.md  example.env  fix_ruff.py  manage.py  mypy.ini  pyproject.toml  requirements.txt
.claude/agents/: wedding-system-architect.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
apps/: __init__.py
apps/authentication/: apps.py  docs.py  serializers.py  tests.py  urls.py  validators.py  views.py
apps/common/: __init__.py  constants.py  errors.py  logging_constants.py  responses.py  serializers.py  test_data.py  tests.py
apps/common/middleware/: __init__.py  logging.py
apps/common/validators/: __init__.py  base.py  business.py
apps/guests/: apps.py  docs.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
apps/guests/migrations/: 0001_initial.py
apps/profiles/: apps.py  docs.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
apps/profiles/migrations/: 0001_initial.py
apps/tasks/: apps.py  docs.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
apps/tasks/migrations/: 0001_initial.py
apps/vendors/: __init__.py  apps.py  docs.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
apps/vendors/migrations/: 0001_initial.py
capstone_resources/: blogging_platform.txt  ecom_product.txt  event_management.txt  fitness_tracker.txt  inventory_management.txt  movie_review.txt  recipe_management.txt  social_media.txt  summary_benchmark_ideas.txt  task_management.txt
config/: settings.py  urls.py
scripts/: setup_db.sh
tests/: test_api_endpoints.py
